4th:Don't want this one!

--- a/menuList.html
+++ b/menuList.html
@@ -3,6 +3,6 @@
     {{ item.name }},
     {{ item.short_name }},
     {{ item.description}}
-    <button ng-click="dontWantThis({index: $index});">Remove Item</button>
+    <button ng-click="dontWantThis({index: $index});">Don't want this one!</button>
   </li>
 </ul>
